/*
 *  UCF COP3330 Fall 2021 Assignment 3 Solution
 *  Copyright 2021 Brooks McKinley
 */


package ex45;

public class ExerciseConstants {
    public static final String INPUT_FILENAME = "exercise45_input.txt";
}
