@startuml
'https://plantuml.com/class-diagram

class App {
    +{static} void main(String[] args)
}

class FileIO {
    +{static} ArrayList<String> getRecords(String inputFilename)
    +{static} void writeOutput(String outputFilename, String output)
}

class PromptInput {
    -Scanner scan
    +PromptInput(Scanner scan)
    +String promptLine(String prompt)
}

class LineReplacer {
    -List<String> lines
    +ListReplacer(List lines)
    +void replace(String original, String replacement)
    +String getOutput()
}

class ExerciseConstants {
    +{static} String INPUT_FILENAME
}

App *-- LineReplacer
App o-- FileIO
App o-- ExerciseConstants
App o-- PromptInput

@enduml